self practice done

--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@ body{
     font-family: 'Roboto Slab', serif;
     margin-top: 30px;
 }
-.self-introduction{
+#header{
+    margin-top: 2%;
+    box-shadow: 5px 0px 80px gray;
+    border-radius: 10px;
+}
+.flexible-container{
     display: flex;
     width: 90%;
 }
@@ -59,6 +64,60 @@ h2{
     margin-top: 250px;
     margin-left: 150px;
 }
+.middle-section h1{
+    text-shadow: 10px 10px 30px gray;
+}
 .middle-section p{
     text-align: justify;
 }
+.hobby{
+    margin-left: 40px;
+    margin-top: 30px;
+    text-shadow: 10px 10px 30px gray;
+}
+.hobby p{
+    text-align: justify;
+}
+.hobby-image{
+    margin-left: 20px;
+    margin-top: 30px;
+}
+.experiance-item h1{
+    margin-left: 40px;
+    text-shadow: 10px 10px 30px gray;
+}
+.developer-item{
+    margin-left: 80px;
+    box-shadow: 10px 10px 40px gray;
+    padding: 20px;
+    border-radius: 5px;
+}
+.developer-item h3{
+    color: blueviolet;
+    font-size: 20px;
+}
+#android-app-developer{
+    border-image: linear-gradient(orange, tomato);
+    border-top: 5px solid;
+    border-right: 2px dotted;
+    border-image-slice: 1;
+}
+#web-developer{
+    border-image: linear-gradient(orange, tomato);
+    border-top: 5px solid;
+    border-right: 2px dotted;
+    border-image-slice: 1;
+}
+.footer{
+    margin-top: 100px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+}
+.footer span{
+    font-style: italic;
+    font-size: 40px;
+    color: tomato;
+    text-shadow: 10px 10px 30px gray;
+}
+
